# eosio-stats-plugin

./: CMakeLists.txt  LICENSE.txt  README.md
include/eosio/stats_plugin/: stats_plugin.hpp
src/: stats_plugin.cpp  watcher_plugin.cpp
